vite with react

--- a/index.html
+++ b/index.html
@@ -1,39 +1,13 @@
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
     <div id="root"></div>
-</body>
-<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-<script type="text/javascript" src="https://unpkg.com/babel-standalone@6/babel.js"></script>
-
-<script type="text/babel">
-    // Define a component called Greetings
-    function Greetings() {
-      return <h1>Hello readers, Thankyou for reading this blog !</h1>;
-    }
-
-    function Aboutus(){
-        return <div>About Us</div>
-    }
-
-    function Contactus(){
-        return <div>Contact Us</div>
-    }
-  
-    // Render the component to the DOM
-    ReactDOM.render(
-        <div>
-            <Greetings />
-            <Aboutus/>
-            <Contactus/>         
-        </div>,
-      document.getElementById("root")
-    );
-  </script>
-
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
